* Sun Jun 08 2014 Martin Kolman <martin.kolman@gmail.com> - 0.47.1
- the QtQuick GUI now downloads new tiles asynchronously
 - much faster asynchronous tile loading !
 - no more synchronous tile download stalls !
 - no more GUI freezes when starting modRana without connectivity !
 - tiles currently on the screen have a diwnload priority (LiFo download queue)
 - if the queue is full, old download requests that are probably no longer visible are dropped
 - proper tile download error hanling & retry support
 - proper tile download feedback
 - tile handling debug support
- fix tiles stuck on "Downloading"/"Loading" in GTK GUI
- fix weird tile loading artifacts in overlay mode in the GTK GUI
- remove all Cloudmade layers as they were discontinue in the first half of May
- change Sailfish OS profile folder name to harbour-modrana and migrate all data to the new folders
 - this is fully automatic and no user interaction is needed
 - this makes modRana Harbour compliant in regards to profile paths
* Sun Apr 20 2014 Martin Kolman <martin.kolman@gmail.com> - 0.46.5
- fix saving of local search results to POI database
- fix batch download breaking for some batches
* Thu Apr 17 2014 Martin Kolman <martin.kolman@gmail.com> - 0.46.4
- don't include the backported Urllib 3 and argparse in the Sailfish package
* Thu Apr 17 2014 Martin Kolman <martin.kolman@gmail.com> - 0.46.3
- disable tile id debugging in pinchmap that was left on by mistake
* Thu Apr 17 2014 Martin Kolman <martin.kolman@gmail.com> - 0.46.2
- fix tile URL generation for one of the providers
* Wed Apr 16 2014 Martin Kolman <martin.kolman@gmail.com> - 0.46.1
- local search works again thanks to a patch provided by Geoff Kuenning - thanks a lot ! :)
- it is now possible to set local search radius in the GTK GUI (in options and directly in the search menu with a toggle button)
- map display and dragging should now be faster
- automatic map tile downloading has been rewritten and should be now more efficient