@@ -1,1 +1,1 @@
-0.47.1
+0.47.2
